# ClipStack

./: .gitignore  README.md  main.py  requirments.txt
.github/workflows/: Build ClipStack Cross-Platform.yml
ClipStack/: main.py  pyproject.toml
